--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ body {
 
 .parallax-two-background {
   position: relative;
-  background: url(img/parallax-two-background.jpg);
+  background: url(../img/parallax-two-background.jpg);
   height: 60vh;
   background-position: center;
   background-attachment: fixed;
@@ -242,7 +242,7 @@ body {
 
 .parallax-three-background {
   position: relative;
-  background: url(img/parallax-three-background.jpg);
+  background: url(../img/parallax-three-background.jpg);
   height: 60vh;
   background-position: center;
   background-attachment: fixed;
