--- a/css/style-services.css
+++ b/css/style-services.css
@@ -120,7 +120,7 @@ body {
 
 .parallax-two-background {
   position: relative;
-  background: url(/img/service-parallax-two.jpg);
+  background: url(../img/service-parallax-two.jpg);
   height: 60vh;
   background-position: center;
   background-attachment: fixed;
@@ -129,7 +129,7 @@ body {
 
 .parallax-three-background {
   position: relative;
-  background: url(/img/service-parallax-three.jpg);
+  background: url(../img/service-parallax-three.jpg);
   height: 60vh;
   background-position: center;
   background-attachment: fixed;
@@ -138,7 +138,7 @@ body {
 
 .parallax-four-background {
   position: relative;
-  background: url(/img/service-parallax-four.jpg);
+  background: url(../img/service-parallax-four.jpg);
   height: 60vh;
   background-position: center;
   background-attachment: fixed;
@@ -147,7 +147,7 @@ body {
 
 .parallax-five-background {
   position: relative;
-  background: url(/img/service-parallax-five.jpg);
+  background: url(../img/service-parallax-five.jpg);
   height: 60vh;
   background-position: top;
   background-attachment: fixed;
